# auto-git

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  EPIC3_TEST_RESULTS.md  README.md  gen-gac-gemini.sh  gen-gac.sh  gen-pr-desc  gen-pr-desc-gemini.sh  gen-pr-desc-original.sh  gen-pr-desc.sh  pyproject.toml  verify_structure.py
.claude/commands/: start-story.md
.github/workflows/: ci.yml
docs/: EPIC1_SUMMARY.md  architecture-design.md  architecture-overview.md  code-standards.md  enterprise-adoption-plan.md  implementation-roadmap.md  project-overview.md  roadmap-refined.md  source-tree.md
example-configs/: anthropic-config.yaml  multi-provider-config.yaml  openai-config.yaml
prompts/: commit-generation.txt  pr-generation.txt  pr-validation.txt
scripts/: setup.sh
src/gitai/: __init__.py  __main__.py  cli.py
src/gitai/commands/: __init__.py  commit.py  config.py  pr.py  templates.py
src/gitai/config/: __init__.py  manager.py  models.py
src/gitai/core/: git_analyzer.py  models.py
src/gitai/providers/: anthropic.py  base.py  factory.py  lmstudio.py  ollama.py  openai.py
src/gitai/templates/: __init__.py  context.py  manager.py
src/gitai/templates/defaults/: README.md  base.j2
src/gitai/templates/defaults/commit/: conventional.j2  descriptive.j2  minimal.j2
src/gitai/templates/defaults/pr/: github.j2  gitlab.j2  standard.j2
src/gitai/utils/: exceptions.py  logger.py  prompts.py  validation.py
tests/: __init__.py
