[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitai"
version = "0.1.0"
description = "AI-powered commit and PR description generation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GitAI Contributors", email = "contributors@gitai.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
keywords = ["git", "ai", "commit", "pr", "automation"]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "GitPython>=3.1.30",
    "Jinja2>=3.1.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=5.0.0",
    "requests-mock>=1.9.0",
    "pre-commit>=2.20.0",
]

[project.scripts]
gitai = "gitai.cli:main"

[project.urls]
Homepage = "https://github.com/gitai/gitai"
Documentation = "https://docs.gitai.dev"
Repository = "https://github.com/gitai/gitai"
Issues = "https://github.com/gitai/gitai/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gitai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/gitai --cov-report=html --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "git.*"
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["gitai"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]
